--- a/main.html
+++ b/main.html
@@ -7,6 +7,35 @@
 </head>
 
 <body>
+	<nav role="navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#home">Home</a></li>
+            <li role="listitem"><a href="#about">About</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+	 <main>
+        <!-- Portfolio Heading -->
+        <h1 role="heading">My Portfolio</h1>
+
+        <!-- Profile Image -->
+        <img role="img" src="profile.jpg" alt="Portrait of [Your Name]">
+
+        <!-- Brief Description -->
+        <section>
+            <p>Welcome to my portfolio! Here you can find information about my projects, skills, and experiences.</p>
+        </section>
+
+		  <section>
+            <h2>Projects</h2>
+            <ul role="list">
+                <li role="listitem">Project 1: Description of project 1.</li>
+                <li role="listitem">Project 2: Description of project 2.</li>
+                <li role="listitem">Project 3: Description of project 3.</li>
+            </ul>
+        </section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
